fixing image centering on index.html on small screens

--- a/css/default.scss
+++ b/css/default.scss
@@ -171,17 +171,17 @@ div.sitesearch p {
 
 .home_image {
   display: block; 
-  margin-left: auto; 
-  margin-right: auto; 
-  padding: 1em 2em 1em 2em; 
-  max-width: 420px;
+  width: 100%;
 
   img {
     border: thin;
     display: block;
+    margin-left: auto;
+    margin-right: auto;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
+    max-width: 90%;
   }
 }
 
